<resources>
    <!--string name="app_name">RoyaleAndroidSample</string-->
    <string name="royale_image_description">the data received from royale</string>
    <string name="button">Button</string>
    <string name="button1">Button</string>
    <string name="start_rec">Start Rec</string>
    <string name="stop">Stop</string>
    <string name="start_proc">start_proc</string>
    <string name="todo">TODO</string>
    <string name="data_from_pico">data from pico</string>
    <string name="startproc">StartProc</string>
    <string name="record">Record</string>
    <string name="start">start</string>
    <string name="select_mode">Scegli una modalità:</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
</resources>
