<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="231dp"
        android:layout_height="62dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="57dp"
        android:text="@string/select_mode"
        android:textAppearance="@android:style/TextAppearance.Material.WindowTitle"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Seleziona una modalita':" />

    <Button
        android:id="@+id/autoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="302dp"
        android:text="@string/automatic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/manualButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:text="@string/manual"
        app:layout_constraintBaseline_toBaselineOf="@+id/autoButton"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>