<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SampleActivity">

    <com.example.android.camera2video.AutoFitTextureView
        android:id="@+id/texture"
        android:layout_width="417dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageViewAmplitude"
        app:layout_constraintTop_toTopOf="parent" />

    <com.wonderkiln.camerakit.CameraView
        android:id="@+id/cameraView"
        android:layout_width="399dp"
        android:layout_height="528dp"
        app:layout_constraintBottom_toTopOf="@+id/texture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/texture"
        app:layout_constraintTop_toTopOf="parent">


    </com.wonderkiln.camerakit.CameraView>

    <ImageView
        android:id="@+id/imageViewAmplitude"
        android:layout_width="360dp"
        android:layout_height="235dp"

        android:layout_marginTop="275dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/royale_image_description"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/texture" />

    <Button
        android:id="@+id/btnStartRec"
        android:layout_width="100dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/start_rec"
        app:layout_constraintStart_toEndOf="@+id/buttonStart"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAmplitude"
        tools:text="Start Rec" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="93dp"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/stop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonStart"
        tools:text="Stop" />

    <Button
        android:id="@+id/btnStartProc"
        android:layout_width="95dp"
        android:layout_height="33dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="8dp"
        android:text="@string/start_proc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartRec"
        app:layout_constraintVertical_bias="0.269"
        tools:text="startProc" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="93dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/btnStop"
        app:layout_constraintEnd_toStartOf="@+id/btnStartRec"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAmplitude"
        tools:text="Start Cameras" />

</android.support.constraint.ConstraintLayout>
